# sqlmodel-tutorial

./: .gitignore
sqlmodel-tutorial/: app.py  database.db  models.py  pyproject.toml
